--- a/cricket-frontend/package.json
+++ b/cricket-frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+    "engines": { "node": "20.x" },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,6 +29,8 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "https://registry.npmjs.org/tailwindcss/-/tailwindcss-3.4.10.tgz",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+      "rollup": "^4.21.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.21.0"
   }
 }
